# ni

./: .ni.json  Cargo.toml  LICENSE  README.md  _nr  justfile  ni.plugin.zsh  package.json
completions/: _nr  _nun
core/: Cargo.toml
core/src/: agent.rs  commands.rs  execute.rs  lib.rs
deprecated/: completions.zsh  ni.sh  nun.sh
src/: completions.zsh  main.rs  nit.sh
test/: ni.bun.sh  ni.npm.sh  ni.pnpm.sh  ni.yarn.sh  nun.bun.sh  nun.npm.sh  nun.pnpm.sh  nun.yarn.sh  test.sh
test/mock/: bun.sh  npm.sh  pnpm.sh  yarn.sh
