[package]
name = "ni-rust"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["core"]

[[bin]]
name = "ni"

[[bin]]
name = "nr"

[[bin]]
name = "ni-completions"

[profile.release]
strip = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
serde_json = "1.0.96"
ni_core = { path = "./core" }
